bindata/istio-csr/istio-csr-api-server-egress-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: istio-csr-api-server-egress
  labels:
    cert-manager.operator.openshift.io/owned-by: istio-csr
spec:
  podSelector:
    matchLabels:
      app: cert-manager-istio-csr
  policyTypes:
  - Egress
  egress:
  - ports:
    - protocol: TCP
      port: 6443
