bindata/istio-csr/istio-csr-grpc-ingress-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: istio-csr-grpc-ingress
  labels:
    cert-manager.operator.openshift.io/owned-by: istio-csr
spec:
  podSelector:
    matchLabels:
      app: cert-manager-istio-csr
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 6443
