bindata/istio-csr/istio-csr-metrics-ingress-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: istio-csr-metrics-ingress
  labels:
    cert-manager.operator.openshift.io/owned-by: istio-csr
spec:
  podSelector:
    matchLabels:
      app: cert-manager-istio-csr
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: openshift-monitoring
    ports:
    - protocol: TCP
      port: 9402
